tests222/tests2/test114.out
lli: <stdin>:1:1: error: expected top-level entity
line 4: function y is not defined
^
